fix: Spacing again

--- a/scss/components/_small-quote.scss
+++ b/scss/components/_small-quote.scss
@@ -1,6 +1,6 @@
 .vf-small-quote {
   position: relative;
-  padding: 35px $spacing-md 37px;
+  padding: 36px 48px 37px;
   border-radius: 20px 20px 20px 20px;
   margin: 40px 0 60px;
   @include typo-paragraph-secondary-mobile();
